2004-03-29  Jackson Harper  <jackson@ximian.com>

	* main.c: Handle pinvoke info where there is not an impl_map
	entry.
	
2004-03-27  Vladimir Vukicevic  <vladimir@pobox.com>

       * get.c (get_constant): output bool consts as bool(true) or
       bool(false)  (to be same as ildasm, also what mono and ms
       ilasm expect)

2004-01-31  Martin Baulig  <martin@ximian.com>

	* get.c (get_methodspec): It's a methoddef or ref token.

2004-01-26  Martin Baulig  <martin@ximian.com>

	* main.cs (--show-tokens): New command line argument to show
	type tokens in the disassembly.

	* get.c (get_typedef, get_typespec, get_typeref): If
	`show_tokens', include the token in the type name.
	(get_type): Do some type parsing here and include the token in the
	returned type name if requested.
	(get_method): Include tokens if requested.

2004-01-17  Zoltan Varga  <vargaz@freemail.hu>

	* main.c get.c: Add support for dumping the custom attributes of
	modules.

2004-01-09  Jackson Harper  <jackson@ximian.com>

	* monodis.1: Add --show-method-tokens switch
	* get.c: When stringifying methods show the method token if the
	show-method-tokens flag is set.
	* get.h: Add show_method_tokens flag
	* main.c: Add --show-method-tokens switch
	
2004-01-09  Jackson Harper  <jackson@ximian.com>

	* monodis.1: Add typespec switch
	
2004-01-08  Jackson Harper  <jackson@ximian.com>

	* main.c: Add switch to dump typespec table.
	* dump.c/dump.h: Add function for dumping typespec table.
	
2003-12-19  Zoltan Varga  <vargaz@freemail.hu>

	* dump.c (dump_table_exported): Fix output.

2003-12-08  Jackson Harper <jackson@ximian.com>

	* main.cs: escape module names.
	
2003-12-03  Zoltan Varga  <vargaz@freemail.hu>

	* main.c (dis_field_list): Update after changes to 
	mono_metadata_get_constant_index ().

2003-11-26  Zoltan Varga  <vargaz@freemail.hu>

	* dump.c dump.h main.c: Added support for dumping the ImplMap table
	(--implmap).

	* main.c (dis_method_list): Avoid disassembling native code.
