@@ -1,3 +1,7 @@
+2004-04-01  Martin Baulig  <martin@ximian.com>
+
+	* dump.c (dump_table_memberref): Added support for TypeDef's.
+
 2004-03-29  Jackson Harper  <jackson@ximian.com>
 
 	* main.c: Handle pinvoke info where there is not an impl_map
